--- a/src/index.css
+++ b/src/index.css
@@ -14,14 +14,134 @@ code {
 
 .card-grid {
   display: flex;
+  width: 70%;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .card {
-  flex-direction: column;
+  display: flex;
+  margin: 10px;
+  padding: 5px;
+  flex-direction: row;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  border: 1px solid black;
+  box-shadow: 8px 8px 5px 0px rgba(112, 171, 212, 0.75);
+  -webkit-box-shadow: 8px 8px 5px 0px rgba(129, 179, 214, 0.75);
+  -moz-box-shadow: 8px 8px 5px 0px rgba(132, 177, 209, 0.75);
 }
 
-.pokemon-img img {
-  width: 120px;
+.card-left {
+  position: relative;
+  justify-content: center;
+  width: 60%;
+  font-weight: bold;
+  background-color: rgb(230, 226, 226);
+  border-radius: 20px;
+  margin: 5px 10px;
+  z-index: 0;
+}
+
+.card-right {
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  margin: 5em 1em;
+}
+
+.pokemon-name {
+  font-size: 1.6em;
+}
+
+.type-text {
+  font-size: 1.3em;
+}
+
+.card-left img {
+  position: absolute;
+  width: 11em;
+  transform: translate(-50%, 30%);
+}
+
+.pokemon-stats {
+  display: flex;
+}
+
+.pokemon-stats-names {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+.pokemon-stats-numbers {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 2em;
+  font-weight: bold;
+}
+.pokemon-stats-bars {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0% 10%;
+}
+.pokemon-stats-progress-bar-background {
+  margin-top: 0.3rem;
+  display: flex;
+  background-color: rgba(211, 211, 211, 0.995);
+  height: 1rem;
+  width: 9rem;
+  border-radius: 20px;
+}
+.pokemon-stats-progress-bar {
+  display: flex;
+  background-color: rgb(99, 181, 220);
+  height: 100%;
+  justify-content: center;
+  font-size: 0.7rem;
+  color: black;
+  border-radius: 20px;
+}
+
+.pokemon-id {
+  left: 40%;
+  z-index: -1;
+  font-size: 11rem;
+  text-align: center;
+  font-weight: bolder;
+  font-style: italic;
+  color: rgb(151, 151, 151);
+}
+
+.categories-buttons {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin: 1em;
+  padding: 1em;
+  border: 3px solid black;
+  border-radius: 20px;
+  height: auto;
+}
+
+.categories-buttons h2 {
+  text-align: center;
+}
+
+.category-button {
+  width: 100%;
+  margin-bottom: 0.4rem;
+  font-size: large;
+  height: 2.3rem;
+  border-radius: 0.2rem;
+  margin-top: 0.2rem;
+}
+
+.category-button:hover {
+  cursor: pointer;
 }
