--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 .card-grid {
   display: flex;
-  width: 70%;
+  width: 50%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -32,6 +32,12 @@ code {
   box-shadow: 8px 8px 5px 0px rgba(112, 171, 212, 0.75);
   -webkit-box-shadow: 8px 8px 5px 0px rgba(129, 179, 214, 0.75);
   -moz-box-shadow: 8px 8px 5px 0px rgba(132, 177, 209, 0.75);
+  background: rgb(0, 60, 113);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 60, 113, 1) 20%,
+    rgb(44, 64, 83) 69%
+  );
 }
 
 .card-left {
@@ -43,6 +49,8 @@ code {
   border-radius: 20px;
   margin: 5px 10px;
   z-index: 0;
+  background: rgb(0, 60, 113);
+  background: linear-gradient(90deg, rgb(0, 54, 101) 20%, rgb(44, 64, 83) 69%);
 }
 
 .card-right {
@@ -100,7 +108,7 @@ code {
 }
 .pokemon-stats-progress-bar {
   display: flex;
-  background-color: rgb(99, 181, 220);
+  background-color: rgb(44, 131, 171);
   height: 100%;
   justify-content: center;
   font-size: 0.7rem;
@@ -115,13 +123,13 @@ code {
   text-align: center;
   font-weight: bolder;
   font-style: italic;
-  color: rgb(151, 151, 151);
+  color: rgb(47, 107, 127);
 }
 
 .categories-buttons {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 15%;
   margin: 1em;
   padding: 1em;
   border: 3px solid black;
@@ -129,8 +137,10 @@ code {
   height: auto;
 }
 
-.categories-buttons h2 {
+.categories-buttons h1 {
   text-align: center;
+  color: rgb(61, 105, 149);
+  margin-block-start: 0.1rem;
 }
 
 .category-button {
@@ -138,7 +148,7 @@ code {
   margin-bottom: 0.4rem;
   font-size: large;
   height: 2.3rem;
-  border-radius: 0.2rem;
+  border-radius: 20px;
   margin-top: 0.2rem;
 }
 
